# hotdoc_c_extension

./: .gitignore  .travis.yml  MANIFEST.in  README.md  c_extension.py  setup.py
hotdoc_c_extension/: VERSION.txt  c_extension.py  c_formatter.py  c_html_formatter.py  extensions.py  fundamentals.py  gi_annotation_parser.py  gi_extension.py  gi_formatter.py  gi_gtkdoc_links.py  gi_html_formatter.py  gi_node_cache.py  gi_symbols.py  gi_utils.py  test_gi_extension.py
hotdoc_c_extension/c_comment_scanner/: scanner.h  scanner.l  scannermodule.c
hotdoc_c_extension/clang/: cindex.py
hotdoc_c_extension/templates/: javascript_prototype.html  python_compound.html  python_prototype.html
hotdoc_c_extension/test_sources/func/: Func-1.0.gir  function.c  function.h  meson.build
hotdoc_c_extension/tests_assets/: test-other-file.c
hotdoc_c_extension/transition_scripts/: hotdoc_gtk_doc_porter
hotdoc_c_extension/utils/: utils.py
utils/: setup_utils.py
